--- a/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
@@ -50,9 +50,6 @@
                                             Khoa
                                         </th>
                                         <th>
-                                            Bộ môn
-                                        </th>
-                                        <th>
                                             Vai trò
                                         </th>
                                         <th class="text-center">
@@ -99,16 +96,6 @@
                                                 else
                                                 {
                                                     @item.Faculty.faculty_name
-                                                }
-                                            </td>
-                                            <td>
-                                                @if (item.DepartmentList.department_name == null)
-                                                {
-                                                    <span>Chưa có bộ môn</span>
-                                                }
-                                                else
-                                                {
-                                                    @item.DepartmentList.department_name
                                                 }
                                             </td>
                                             <td>
@@ -291,8 +278,9 @@
             processData: false,
             data: formData
         }).done(function (ketqua) {
-            swal('Thành công', 'Thêm thành viên thành công', 'success');
-            window.location.reload();
+            swal('Thành công', 'Thêm thành viên thành công', 'success').then(function () {
+                location.reload();
+            });
         });
     });
 
