--- a/MonthlyStatement/Areas/Department/Views/ListDepartmentMember/Edit.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/ListDepartmentMember/Edit.cshtml
@@ -34,7 +34,7 @@
                                     <!-- Form Group (Tên báo cáo)-->
                                     <div class="mb-3">
                                         <label class="small mb-1">Tên bộ môn</label>
-                                        @Html.EditorFor(model => model.department_name, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.EditorFor(model => model.department_name, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
                                         @Html.ValidationMessageFor(model => model.department_name, "", new { @class = "text-danger" })
                                     </div>
                                     <div style="text-align: center; margin-top:1.8rem" class="mb-3">
