--- a/MonthlyStatement/Areas/Department/Views/Statistical/Index_Statistical_Department.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/Statistical/Index_Statistical_Department.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MonthlyStatement.Models.Faculty>
+﻿@model IEnumerable<MonthlyStatement.Models.DepartmentList>
 @using MonthlyStatement.Models
 @{ Layout = "~/Views/Shared/_Layout.cshtml"; }
 @{
@@ -8,10 +8,10 @@
     DateTime Date = ViewBag.Date;
 
     CP25Team04Entities models = new CP25Team04Entities();
-    int id_faculty = Model.FirstOrDefault().faculty_id;
-    var nhanvien = models.Profiles.Where(n => n.AspNetUser.AspNetRoles.FirstOrDefault().Name == "Nhân viên" && n.faculty_id == id_faculty).ToArray();
-    var giangvien = models.Profiles.Where(g => g.AspNetUser.AspNetRoles.FirstOrDefault().Name == "Giảng viên" && g.faculty_id == id_faculty).ToArray();
-    var bomon = models.Profiles.Where(b => b.AspNetUser.AspNetRoles.FirstOrDefault().Name == "Bộ môn" && b.faculty_id == id_faculty).ToArray();
+    int id_department = Model.FirstOrDefault().department_id;
+    var nhanvien = models.Profiles.Where(n => n.AspNetUser.AspNetRoles.FirstOrDefault().Name == "Nhân viên" && n.department_id == id_department).ToArray();
+    var giangvien = models.Profiles.Where(g => g.AspNetUser.AspNetRoles.FirstOrDefault().Name == "Giảng viên" && g.department_id == id_department).ToArray();
+    var bomon = models.Profiles.Where(b => b.AspNetUser.AspNetRoles.FirstOrDefault().Name == "Bộ môn" && b.department_id == id_department).ToArray();
 }
 
 <section class="section">
@@ -20,10 +20,10 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Quản lý thống kê báo cáo Khoa @Model.FirstOrDefault().faculty_name </h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Thống kê báo cáo bộ môn @Model.FirstOrDefault().department_name </h4>
                     </div>
                     <div class="card-body">
-                        <form action="@Url.Action("Index_Statistical","Statistical")">
+                        <form action="@Url.Action("Index_Statistical_Department","Statistical")">
                             <div class="row" style="margin-bottom: 20px">
                                 <div class="col-sm-12 col-md-3">
                                     <input name="date" type="month" class="form-control" value="@Date.ToString("yyyy-MM")">
@@ -48,51 +48,38 @@
                                         <div style="margin-bottom:20px">
                                             <h5>
                                                 Tổng thành viên trong khoa:
-                                                @(item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Nhân viên")
-                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Giảng viên")
-                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Bộ môn")
-                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Thư ký")
-                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Ban phòng khoa")
-                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Quản trị viên")
-                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Chưa cấp quyền"))
+                                                @(item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Nhân viên" && x.department_id == id_department)
+                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Giảng viên" && x.department_id == id_department)
+                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Bộ môn" && x.department_id == id_department))
                                                 Thành viên
                                             </h5>
                                         </div>
 
                                         <div class="row">
-                                            <div class="col-lg-3 col-md-3 col-sm-12">
+                                            <div class="col-lg-4 col-md-4 col-sm-12">
                                                 <h5>
-                                                    Thư ký
+                                                    Nhân viên
                                                 </h5>
                                                 <div class="text-muted" style="font-size:16px">
-                                                    @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Thư ký")
+                                                    @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Nhân viên")
                                                     Thành viên
                                                 </div>
                                             </div>
-                                            <div class="col-lg-3 col-md-3 col-sm-12">
+                                            <div class="col-lg-4 col-md-4 col-sm-12">
                                                 <h5>
-                                                    Ban phòng khoa
+                                                    Giảng viên
                                                 </h5>
                                                 <div class="text-muted" style="font-size:16px">
-                                                    @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Ban phòng khoa")
+                                                    @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Giảng viên")
                                                     Thành viên
                                                 </div>
                                             </div>
-                                            <div class="col-lg-3 col-md-3 col-sm-12">
+                                            <div class="col-lg-4 col-md-4 col-sm-12">
                                                 <h5>
-                                                    Quản trị viên
+                                                    Bộ môn
                                                 </h5>
                                                 <div class="text-muted" style="font-size:16px">
-                                                    @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Quản trị viên")
-                                                    Thành viên
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-3 col-md-3 col-sm-12">
-                                                <h5>
-                                                    Chưa cấp quyền
-                                                </h5>
-                                                <div class="text-muted" style="font-size:16px">
-                                                    @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Chưa cấp quyền")
+                                                    @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Bộ môn")
                                                     Thành viên
                                                 </div>
                                             </div>
@@ -101,9 +88,7 @@
                                     </div>
                                     <div class="summary-item">
                                         <h5 class="mt-3">
-                                            Nhân viên :
-                                            @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Nhân viên")
-                                            Thành viên
+                                            Nhân viên
                                         </h5>
                                         <div class="table-responsive">
                                             <table class="table table-striped table-hover dataTable no-footer">
@@ -175,9 +160,7 @@
                                     </div>
                                     <div class="summary-item">
                                         <h5 class="mt-3">
-                                            Giảng viên :
-                                            @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Giảng viên")
-                                            Thành viên
+                                            Giảng viên
                                         </h5>
                                         <div class="table-responsive">
                                             <table class="table table-striped table-hover dataTable no-footer">
@@ -247,9 +230,7 @@
                                     </div>
                                     <div class="summary-item">
                                         <h5 class="mt-3">
-                                            Bộ môn :
-                                            @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Bộ môn")
-                                            Thành viên
+                                            Bộ môn
                                         </h5>
                                         <div class="table-responsive">
                                             <table class="table table-striped table-hover dataTable no-footer">
