--- a/MonthlyStatement/Areas/FacultyAreas/Views/Statistical/Index.cshtml
+++ b/MonthlyStatement/Areas/FacultyAreas/Views/Statistical/Index.cshtml
@@ -38,12 +38,12 @@
                                     </button>
                                 </div>
                                 @*<div class="col-sm-12 col-md-2">
-                                    <a class="btn btn-icon btn-primary" href="@Url.Action("ExportToExcelFaculty","Statistical", new { date = Date})">Xuất file excel</a>
-                                </div>*@
+                                        <a class="btn btn-icon btn-primary" href="@Url.Action("ExportToExcelFaculty","Statistical", new { date = Date})">Xuất file excel</a>
+                                    </div>*@
                             </div>
 
                         </form>
-                        <div class="col-12 col-sm-12 col-lg-12" >
+                        <div class="col-12 col-sm-12 col-lg-12">
                             @foreach (var item in Model)
                             {
                                 <div class="summary">
@@ -51,39 +51,69 @@
                                         <div style="margin-bottom:20px">
                                             <h5>
                                                 Tổng thành viên trong khoa:
-                                                @(item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Nhân viên")
-                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Giảng viên")
-                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Bộ môn")
+                                                @(item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Nhân viên" && x.faculty_id == check_Faculty.faculty_id)
+                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Giảng viên" && x.faculty_id == check_Faculty.faculty_id)
+                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Bộ môn" && x.faculty_id == check_Faculty.faculty_id)
+                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Thư ký" && x.faculty_id == check_Faculty.faculty_id)
+                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Ban phòng khoa" && x.faculty_id == check_Faculty.faculty_id)
+                                                                + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Quản trị viên" && x.faculty_id == check_Faculty.faculty_id)
                                                                 + item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Chưa cấp quyền"))
                                                 Thành viên
                                             </h5>
                                         </div>
 
                                         <div class="row">
+                                            @*<div class="col-lg-4 col-md-4 col-sm-12">
+                                                    <h5>
+                                                        Nhân viên
+                                                    </h5>
+                                                    <div class="text-muted" style="font-size:16px">
+                                                        @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Nhân viên" && x.faculty_id == check_Faculty.faculty_id)
+                                                        Thành viên
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-4 col-md-4 col-sm-12">
+                                                    <h5>
+                                                        Giảng viên
+                                                    </h5>
+                                                    <div class="text-muted" style="font-size:16px">
+                                                        @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Giảng viên" && x.faculty_id == check_Faculty.faculty_id)
+                                                        Thành viên
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-4 col-md-4 col-sm-12">
+                                                    <h5>
+                                                        Bộ môn
+                                                    </h5>
+                                                    <div class="text-muted" style="font-size:16px">
+                                                        @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Bộ môn" && x.faculty_id == check_Faculty.faculty_id)
+                                                        Thành viên
+                                                    </div>
+                                                </div>*@
                                             <div class="col-lg-3 col-md-3 col-sm-12">
                                                 <h5>
-                                                    Nhân viên
+                                                    Thư ký
                                                 </h5>
                                                 <div class="text-muted" style="font-size:16px">
-                                                    @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Nhân viên")
+                                                    @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Thư ký" && x.faculty_id == check_Faculty.faculty_id)
                                                     Thành viên
                                                 </div>
                                             </div>
                                             <div class="col-lg-3 col-md-3 col-sm-12">
                                                 <h5>
-                                                    Giảng viên
+                                                    Ban phòng khoa
                                                 </h5>
                                                 <div class="text-muted" style="font-size:16px">
-                                                    @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Giảng viên")
+                                                    @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Ban phòng khoa" && x.faculty_id == check_Faculty.faculty_id)
                                                     Thành viên
                                                 </div>
                                             </div>
                                             <div class="col-lg-3 col-md-3 col-sm-12">
                                                 <h5>
-                                                    Bộ môn
+                                                    Quản trị viên
                                                 </h5>
                                                 <div class="text-muted" style="font-size:16px">
-                                                    @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Bộ môn")
+                                                    @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Quản trị viên" && x.faculty_id == check_Faculty.faculty_id)
                                                     Thành viên
                                                 </div>
                                             </div>
@@ -101,7 +131,9 @@
                                     </div>
                                     <div class="summary-item">
                                         <h5 class="mt-3">
-                                            Nhân viên
+                                            Nhân viên :
+                                            @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Nhân viên" && x.faculty_id == check_Faculty.faculty_id)
+                                            Thành viên
                                         </h5>
                                         <div class="table-responsive">
                                             <table class="table table-striped table-hover dataTable no-footer">
@@ -112,9 +144,9 @@
                                                             Thành viên
                                                         </th>
                                                         <th style="width:300px">
-
+                                                            Bộ môn
                                                         </th>
-                                                        <th style="width:315px">Trạng thái báo cáo</th>
+                                                        <th style="">Trạng thái báo cáo</th>
                                                         <th>Đánh giá</th>
                                                     </tr>
                                                 </thead>
@@ -128,6 +160,14 @@
                                                                 @nhanvien[v].email
                                                             </td>
                                                             <td>
+                                                                @if (nhanvien[v].department_id == null)
+                                                                {
+                                                                    <div>Chưa có bộ môn</div>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <div>@bomon[v].DepartmentList.department_name</div>
+                                                                }
                                                             </td>
                                                             <td>
                                                                 @if (nhanvien[v].AspNetUser?.StaffReports?.FirstOrDefault(y => y.status == "Đã báo cáo" && y.ReportPeriod.start_date <= Date && y.ReportPeriod.end_date > Date) != null)
@@ -165,7 +205,9 @@
                                     </div>
                                     <div class="summary-item">
                                         <h5 class="mt-3">
-                                            Giảng viên
+                                            Giảng viên :
+                                            @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Giảng viên" && x.faculty_id == check_Faculty.faculty_id)
+                                            Thành viên
                                         </h5>
                                         <div class="table-responsive">
                                             <table class="table table-striped table-hover dataTable no-footer">
@@ -175,9 +217,10 @@
                                                         <th style="width: 480px">
                                                             Thành viên
                                                         </th>
-                                                        <th style="width: 300px">
+                                                        <th style="width: 300px ">
+                                                            Bộ môn
                                                         </th>
-                                                        <th style="width: 315px">Trạng thái báo cáo</th>
+                                                        <th style="">Trạng thái báo cáo</th>
                                                         <th>Đánh giá</th>
                                                     </tr>
                                                 </thead>
@@ -188,7 +231,16 @@
                                                         <tr>
                                                             <td class="text-center">@i</td>
                                                             <td>@giangvien[v].email</td>
-                                                            <td></td>
+                                                            <td>
+                                                                @if (giangvien[v].department_id == null)
+                                                                {
+                                                                    <div>Chưa có bộ môn</div>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <div>@giangvien[v].DepartmentList.department_name</div>
+                                                                }
+                                                            </td>
                                                             <td>
                                                                 @if (giangvien[v].AspNetUser?.PersonalReports?.FirstOrDefault(y => y.status == "Đã báo cáo" && y.ReportPeriod.start_date <= Date && y.ReportPeriod.end_date > Date) != null)
                                                                 {
@@ -225,7 +277,9 @@
                                     </div>
                                     <div class="summary-item">
                                         <h5 class="mt-3">
-                                            Bộ môn
+                                            Bộ môn :
+                                            @item.Profiles.Count(x => x.AspNetUser?.AspNetRoles?.FirstOrDefault().Name == "Bộ môn" && x.faculty_id == check_Faculty.faculty_id)
+                                            Thành viên
                                         </h5>
                                         <div class="table-responsive">
                                             <table class="table table-striped table-hover dataTable no-footer">
@@ -236,7 +290,7 @@
                                                             Thành viên
                                                         </th>
                                                         <th style="width: 300px">Bộ môn</th>
-                                                        <th style="width: 315px">Trạng thái báo cáo</th>
+                                                        <th style="">Trạng thái báo cáo</th>
                                                         <th>Đánh giá</th>
                                                     </tr>
                                                 </thead>
@@ -250,11 +304,11 @@
                                                             <td>
                                                                 @if (bomon[v].department_id == null)
                                                                 {
-
+                                                                    <div>Chưa có bộ môn</div>
                                                                 }
-                                                                else 
+                                                                else
                                                                 {
-                                                                    bomon[v].DepartmentList.department_name.Trim();
+                                                                    <div>@bomon[v].DepartmentList.department_name</div>
                                                                 }
                                                             </td>
                                                             <td>
